--- a/app/src/main/res/layout/activity_clases.xml
+++ b/app/src/main/res/layout/activity_clases.xml
@@ -12,6 +12,7 @@
         android:layout_width="361dp"
         android:layout_height="210dp"
         android:layout_marginTop="24dp"
+        app:cardCornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -46,6 +47,7 @@
         android:layout_width="377dp"
         android:layout_height="412dp"
         android:layout_marginTop="16dp"
+        app:cardCornerRadius="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +69,7 @@
                 app:layout_constraintVertical_bias="0.022">
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName"
+                    android:id="@+id/code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -77,7 +79,7 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName2"
+                    android:id="@+id/clas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -87,7 +89,7 @@
                     tools:ignore="SpeakableTextPresentCheck" />
 
                 <EditText
-                    android:id="@+id/editTextTextPersonName3"
+                    android:id="@+id/intens"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
@@ -113,6 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#BA042A"
+                    android:onClick="guardarClases"
                     android:text="Anadir Sesion"
                     app:cornerRadius="25dp" />
 
@@ -121,6 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#BA042A"
+                    android:onClick="mostrarClases"
                     android:text="Mostrar Clase"
                     app:cornerRadius="25dp" />
 
@@ -129,6 +133,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#BA042A"
+                    android:onClick="eliminarClases"
                     android:text="Eliminar Clase"
                     app:cornerRadius="25dp" />
 
@@ -138,6 +143,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="#BA042A"
                     android:minHeight="48dp"
+                    android:onClick="actualizarClases"
                     android:text="Actualizar Clase"
                     app:cornerRadius="25dp"
                     tools:ignore="TouchTargetSizeCheck" />
